# comp0034-cw2i-zczlr12

./: .gitignore  README.md  comp0034-coursework2.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/pasta_sales/: app.py  create_ml_model.py  data_preparation.py  figures.py  layout_charts.py  prediction.py  test.py
src/pasta_sales/pages/: bar_chart.py  current_trends.py  future_trends.py  home.py  line_chart.py  login.py  register.py
src/rest_api/: __init__.py  helpers.py  models.py  routes.py  schemas.py
tests/: conftest.py  test_pasta_sales_selenium.py
