[project]
name = "pasta_sales"
version = "1.0.0"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rest_api", "pasta_sales"]

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["tests"]